--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>analysis</title>
+    <style>
+      html,body{
+        height: 100%;
+        margin: 0px;
+      }
+    </style>
   </head>
   <body>
     <noscript>
